Removed unneed title and fixed style

--- a/libs/watt/package/modal/watt-modal.component.scss
+++ b/libs/watt/package/modal/watt-modal.component.scss
@@ -90,7 +90,7 @@
     margin: var(--watt-space-s) var(--watt-space-ml);
     color: var(--watt-typography-text-color);
 
-    &.watt-modal-title-icon {
+    .watt-modal-title-icon {
       display: flex;
       align-items: center;
       gap: var(--watt-space-s);
