Only target own label (radio buttons have their own labels)

--- a/libs/watt/package/field/watt-field.component.scss
+++ b/libs/watt/package/field/watt-field.component.scss
@@ -131,8 +131,8 @@ watt-field {
     }
   }
 
-  label,
-  .watt-label {
+  & > label,
+  & > .watt-label {
     color: var(--watt-label-text-color);
     display: block;
     width: 100%;
