chore: removes clicked functionality and standardizes filter reset button

--- a/libs/dh/esett/feature-metering-gridarea-imbalance/src/components/metering-gridarea-imbalance.component.html
+++ b/libs/dh/esett/feature-metering-gridarea-imbalance/src/components/metering-gridarea-imbalance.component.html
@@ -24,7 +24,7 @@ limitations under the License.
   [ready]="dataSource.called"
 >
   <watt-data-actions>
-    <dh-download-button [loading]="query.loading()" (clicked)="download()" />
+    <dh-download-button [loading]="query.loading()" (click)="download()" />
   </watt-data-actions>
 
   <watt-data-filters>
