--- a/libs/dh/esett/feature-outgoing-messages/src/lib/details.component.html
+++ b/libs/dh/esett/feature-outgoing-messages/src/lib/details.component.html
@@ -86,7 +86,7 @@ limitations under the License.
   <watt-tabs>
     <watt-tab [label]="t('tabs.message')">
       <vater-stack align="end">
-        <dh-download-button (clicked)="downloadXML('message')" />
+        <dh-download-button (click)="downloadXML('message')" />
       </vater-stack>
 
       <watt-code [code]="dispatchDocument.value()" />
@@ -95,7 +95,7 @@ limitations under the License.
     @if (responseDocument.value()) {
       <watt-tab [label]="t('tabs.receipt')">
         <vater-stack align="end">
-          <dh-download-button (clicked)="downloadXML('receipt')" />
+          <dh-download-button (click)="downloadXML('receipt')" />
         </vater-stack>
 
         <watt-code [code]="responseDocument.value()" language="xml" />
