--- a/libs/dh/imbalance-prices/src/components/details/details.component.html
+++ b/libs/dh/imbalance-prices/src/components/details/details.component.html
@@ -36,7 +36,7 @@ limitations under the License.
     </watt-drawer-heading>
 
     <watt-drawer-actions>
-      <dh-download-button (clicked)="downloadCSV()" />
+      <dh-download-button (click)="downloadCSV()" />
     </watt-drawer-actions>
 
     @if (drawer.isOpen()) {
