--- a/libs/dh/market-participant/feature-market-participant/src/components/details/balance-responsible-relation-tab/dh-balance-responsible-relation-tab.component.html
+++ b/libs/dh/market-participant/feature-market-participant/src/components/details/balance-responsible-relation-tab/dh-balance-responsible-relation-tab.component.html
@@ -28,7 +28,7 @@ limitations under the License.
       (filtersChanges)="store.updateFilters($event)"
     />
 
-    <dh-download-button (clicked)="store.download()" />
+    <dh-download-button (click)="store.download()" />
   </vater-stack>
 
   @if (store.isLoading()) {
