--- a/libs/dh/esett/feature-balance-responsible/src/lib/dh-balance-responsible.component.html
+++ b/libs/dh/esett/feature-balance-responsible/src/lib/dh-balance-responsible.component.html
@@ -26,7 +26,7 @@ limitations under the License.
 >
   <watt-data-actions>
     <vater-stack direction="row" gap="s">
-      <dh-download-button [loading]="isDownloading()" (clicked)="download()" />
+      <dh-download-button [loading]="isDownloading()" (click)="download()" />
 
       <dh-balance-responsible-importer [uploadUrl]="importUrl()" />
     </vater-stack>
