--- a/libs/dh/grid-areas/src/components/grid-areas.component.html
+++ b/libs/dh/grid-areas/src/components/grid-areas.component.html
@@ -49,7 +49,7 @@ limitations under the License.
   </watt-data-filters>
 
   <watt-data-actions>
-    <dh-download-button (clicked)="download()" />
+    <dh-download-button (click)="download()" />
   </watt-data-actions>
 
   <watt-table
