--- a/libs/dh/market-participant/feature-market-roles/src/components/market-roles.component.html
+++ b/libs/dh/market-participant/feature-market-roles/src/components/market-roles.component.html
@@ -19,7 +19,7 @@ limitations under the License.
     <vater-stack direction="row" gap="s">
       <vater-spacer />
 
-      <dh-download-button (clicked)="download()" />
+      <dh-download-button (click)="download()" />
     </vater-stack>
 
     <vater-flex fill="vertical" scrollable>
