feat: adds reset filter button

--- a/libs/dh/grid-areas/src/components/grid-areas.component.html
+++ b/libs/dh/grid-areas/src/components/grid-areas.component.html
@@ -45,6 +45,8 @@ limitations under the License.
         [(ngModel)]="selectedGridAreaStatuses"
         [placeholder]="t('statusTypePlaceholder')"
       />
+
+      <dh-reset-filters-button (click)="resetFilters()" />
     </vater-stack>
   </watt-data-filters>
 
