Feature/process overview adjustments (#5069)
Co-authored-by: Alexander Hafstad <alexander@hafstad.dk>
Co-authored-by: github-actions[bot] <github-actions[bot]@users.noreply.github.com>

--- a/libs/watt/package/table/watt-table.component.html
+++ b/libs/watt/package/table/watt-table.component.html
@@ -143,6 +143,7 @@ limitations under the License.
     mat-row
     *matRowDef="let row; columns: renderedColumns()"
     [attr.aria-selected]="row === activeRow()"
+    [class]="getRowClass(row)"
     [ngClass]="{
       'watt-table-highlight-row': !disabled() && !suppressRowHoverHighlight(),
       'watt-table-clickable-row': !disabled() && rowClick$.observed,
