--- a/libs/watt/package/table/watt-table.component.html
+++ b/libs/watt/package/table/watt-table.component.html
@@ -31,9 +31,7 @@ limitations under the License.
       <th mat-header-cell *matHeaderCellDef class="watt-table-checkbox-cell">
         <watt-checkbox
           [ngModel]="getSelectionState()"
-          (ngModelChange)="
-            $event ? selection.set(dataSource() ? dataSource().filteredData : []) : clearSelection()
-          "
+          (ngModelChange)="$event ? selection.set(dataSource().filteredData) : clearSelection()"
         />
       </th>
       <td mat-cell *matCellDef="let row" class="watt-table-checkbox-cell">
@@ -184,7 +182,7 @@ limitations under the License.
     <ng-container
       *ngTemplateOutlet="
         toolbar.templateRef;
-        context: { $implicit: filterSelectionBy(dataSource() ? dataSource().filteredData : []) }
+        context: { $implicit: filterSelectionBy(dataSource().filteredData) }
       "
     />
   </div>
