--- a/libs/watt/package/core/styles/spacing/_inset.scss
+++ b/libs/watt/package/core/styles/spacing/_inset.scss
@@ -26,6 +26,10 @@
   @include space.inset-m;
 }
 
+.watt-space-inset-ml {
+  @include space.inset-ml;
+}
+
 .watt-space-inset-l {
   @include space.inset-l;
 }
