--- a/libs/watt/package/core/styles/spacing/_inline.scss
+++ b/libs/watt/package/core/styles/spacing/_inline.scss
@@ -29,6 +29,10 @@
   @include space.inline-m;
 }
 
+.watt-space-inline-ml {
+  @include space.inline-ml;
+}
+
 .watt-space-inline-l {
   @include space.inline-l;
 }
