--- a/libs/watt/package/core/styles/spacing/_stack.scss
+++ b/libs/watt/package/core/styles/spacing/_stack.scss
@@ -29,6 +29,10 @@
   @include space.stack-m;
 }
 
+.watt-space-stack-ml {
+  @include space.stack-ml;
+}
+
 .watt-space-stack-l {
   @include space.stack-l;
 }
