feat: limits resize to vertical

--- a/libs/watt/package/textarea-field/watt-textarea-field.component.scss
+++ b/libs/watt/package/textarea-field/watt-textarea-field.component.scss
@@ -28,5 +28,6 @@ watt-textarea-field {
     padding-left: 0;
     background-color: transparent;
     min-height: var(--watt-textarea-min-height);
+    resize: vertical;
   }
 }
