Adjust styling in watt-paginator (opinionated)

--- a/libs/watt/package/paginator/watt-paginator.component.scss
+++ b/libs/watt/package/paginator/watt-paginator.component.scss
@@ -61,7 +61,7 @@ watt-paginator {
 
   .mat-mdc-paginator-container {
     justify-content: center;
-    padding: var(--watt-space-m) var(--watt-space-ml);
+    padding: var(--watt-space-s) var(--watt-space-m);
   }
 
   .mat-mdc-paginator-range-actions {
