--- a/libs/watt/package/table/watt-table.component.html
+++ b/libs/watt/package/table/watt-table.component.html
@@ -147,8 +147,7 @@ limitations under the License.
     [ngClass]="{
       'watt-table-highlight-row': !disabled() && !suppressRowHoverHighlight(),
       'watt-table-clickable-row': !disabled() && rowClick$.observed,
-      'watt-table-active-row': isActiveRow(row),
-      'watt-table-no-end-divider': hideColumnHeaders(),
+      'watt-table-active-row': isActiveRow(row)
     }"
   ></tr>
 
