--- a/libs/dh/imbalance-prices/src/components/imbalance-prices.component.html
+++ b/libs/dh/imbalance-prices/src/components/imbalance-prices.component.html
@@ -64,7 +64,6 @@ limitations under the License.
     </ng-container>
   </watt-table>
 </watt-data-table>
-@let details = this.activeRow();
-@if (details) {
+@if (activeRow(); as details) {
   <dh-imbalance-prices-details [imbalancePrice]="details" (closed)="onClose()" />
 }
